눈 아이콘, index/login/enroll.css 변경

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -16,7 +16,7 @@
 
 /* header */
 header {
-    background-color: skyblue;
+    background-color: green;
     display: flex;
     flex-wrap: nowrap;
 }
