--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -16,9 +16,11 @@
 
 /* header */
 header {
-    background-color: green;
+    background-color: #e5e5e5;
     display: flex;
     flex-wrap: nowrap;
+    z-index: 999;
+    position: relative;
 }
 nav {
     width: 100%;
@@ -32,22 +34,35 @@ li {
 }
 #logo {
     margin: 20px auto 0;
+    cursor: pointer;
 }
 #logo > img {
     width: 150px;
     height: auto;
 }
 a {
-    color: rgb(50, 50, 50);
+    color: black;
     font-size: 18px;
     font-weight: 600;
 }
-
+header span {
+	font-size: 13px;
+	font-weight: bold;
+	color: #5342ea;
+	position: absolute;
+	right: 20px;
+	top: 10px;
+	white-space: nowrap;
+}
 /* 컨텐츠 영역 */
 .main {
     width: 100%;
     height: 100vh;
-    background-color: blue;
+    /* background-color: blue; */
+}
+.main img {
+	width: 1024px;
+	height: 100%	
 }
 .main:nth-child(2) {
     background-color: green;
