상품 관련 jsp, servlet 수

--- a/src/main/webapp/css/product/order.css
+++ b/src/main/webapp/css/product/order.css
@@ -3,6 +3,10 @@
 hr{
      padding: 1px;
  }
+.container {
+   	width: 1024px;
+    margin: 0 auto;  /* 화면에 가운데 정렬하기 위함 */
+}
 .container-md{
      background-color: whitesmoke;
  }
