--- a/src/main/webapp/css/user/mypage/myCommunity.css
+++ b/src/main/webapp/css/user/mypage/myCommunity.css
@@ -49,7 +49,11 @@
 }
 .myCommunity_list th:nth-child(2), td:nth-child(2) {
     width: 130px;
+    font-size: 15px;
     text-align: center;
+}
+.myCommunity_list td:nth-child(2) {
+    font-size: 12px;
 }
 .myCommunity_list th:nth-child(3) {
     width: 500px;
@@ -60,6 +64,9 @@
 }
 .myCommunity_list th:nth-child(4), td:nth-child(4) {
     width: 170px;
+    text-align: center;
+}
+.myCommunity_list td:nth-child(5) {
     text-align: center;
 }
 .myCommunity_list td:last-child {
@@ -73,11 +80,16 @@
 	border-bottom: 1px solid gray;
 }
 
-.btn_area {
+.myCommunity_content #btn_area {
 	position: relative;
+	width: 100%;
+	height: 20px;
+	/* background-color: red; */
+	margin-top: 20px;
 }
-#btn_myInquireList_del {
-	margin: 10px 20px 0 0; 
+.myCommunity_content #btn_myInquireList_del {
+	float: right;
+	margin: auto 20px; 
 	padding: 5px 10px;
 	border: none;
 	border-radius: 5px;
@@ -85,6 +97,25 @@
 	color: white;
 	font-weight: bold;
 	cursor: pointer;
-	float: right;
-	
+}
+.myCommunity_content>.pagebar {
+	position: relative;
+	margin: 10px auto;
+	text-align: center;
+}
+.myCommunity_content>.pagebar a {
+	background-color: #c0c0c0;
+	width: 15px;
+	height: 15px;
+	padding: 5px 10px;
+	color: black;
+	border: none;
+	border-radius: 5px;
+}
+.myCommunity_content>.pagebar span {
+	background-color: black;
+	padding: 5px 10px;
+	color: white;
+	border: none;
+	border-radius: 5px;
 }
