--- a/src/main/webapp/css/admin/productManagement.css
+++ b/src/main/webapp/css/admin/productManagement.css
@@ -82,6 +82,8 @@ a {
   width: 100%;
   border-top: 1px solid #444444;
   border-collapse: collapse;
+  margin-left:auto; 
+  margin-right:auto;
 }
 
 th, td {
@@ -89,11 +91,6 @@ th, td {
     border-bottom: 1px solid #444444;
     padding: 10px;
   }
-
-img{
-    width : 100px;
-    height : 100px;
-}
 
 .btn_edit, .btn_delete {
     border: none;
