커뮤니티 게시글 작성/페이지바 수리 완료!

--- a/src/main/webapp/css/share/shareView.css
+++ b/src/main/webapp/css/share/shareView.css
@@ -66,6 +66,12 @@ a {
     margin-top: 20px;
 }
 
+#date{
+	text-align:right;
+	margin-top:10px;
+	font-weight:200;
+}
+
 #readCount{
     text-align: right;
 }
