--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -22,25 +22,25 @@ header {
     z-index: 999;
     position: relative;
 }
-nav {
+header nav {
     width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-li {
+header li {
     margin: auto 20px;
 }
-#logo {
+header #logo {
     margin: 20px auto 0;
     cursor: pointer;
 }
-#logo > img {
+header #logo > img {
     width: 150px;
     height: auto;
 }
-a {
+header a {
     color: black;
     font-size: 18px;
     font-weight: 600;
