--- a/src/main/webapp/css/user/mypage/myCommunity.css
+++ b/src/main/webapp/css/user/mypage/myCommunity.css
@@ -62,6 +62,9 @@
 .myCommunity_list td:nth-child(3) {
     text-indent: 20px;
 }
+.myCommunity_list td:nth-child(3) a{
+    color: black;
+}
 .myCommunity_list th:nth-child(4), td:nth-child(4) {
     width: 170px;
     text-align: center;
@@ -80,14 +83,15 @@
 	border-bottom: 1px solid gray;
 }
 
-.myCommunity_content #btn_area {
+/* 내 게시글 조회 버튼 영역*/
+.myCommunity_content #myCommunity_btn_area {
 	position: relative;
 	width: 100%;
 	height: 20px;
 	/* background-color: red; */
 	margin-top: 20px;
 }
-.myCommunity_content #btn_myInquireList_del {
+.myCommunity_content #btn_del {
 	float: right;
 	margin: auto 20px; 
 	padding: 5px 10px;
@@ -98,6 +102,8 @@
 	font-weight: bold;
 	cursor: pointer;
 }
+
+/* 내 게시글 조회 페이지바 영역*/
 .myCommunity_content>.pagebar {
 	position: relative;
 	margin: 10px auto;
