1:1 문의 Add 구현/ 전체적으로 css 수정필

--- a/src/main/webapp/css/inquire/inquireAdd.css
+++ b/src/main/webapp/css/inquire/inquireAdd.css
@@ -3,6 +3,7 @@
 body {
 	width: 1024px;
 	margin: 0 auto;
+	
 }
 
 ul, li {
@@ -87,4 +88,8 @@ button {
 
 .form-select {
 	width: 150px;
+}
+.writerFrm{
+	width: 150px;
+	
 }
