ADMIN PAGE 전체 CSS 일부 수정!

--- a/src/main/webapp/css/admin/adminpage.css
+++ b/src/main/webapp/css/admin/adminpage.css
@@ -39,12 +39,10 @@ adminmenu {
 ul {
     list-style: none !important;
     margin: auto 20px !important;
-    float: right
-
 }
 
 li {
-    float: right !important;
+    float: left !important;
     margin: auto 20px !important; 
 }
 #logo {
