--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -7,13 +7,6 @@
     padding: 0px;
     font-family: 'Noto Sans', sans-serif;
 }
-
-/* 홈페이지 규격 */
-.container {
-    width: 1024px;
-    margin: 0 auto;  /* 화면에 가운데 정렬하기 위함 */
-}
-
 /* header */
 header {
     background-color: #e5e5e5;
@@ -24,52 +17,43 @@ header {
 }
 header nav {
     width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    height: 130px;
 }
 header li {
-    margin: auto 20px;
+    margin: auto 15px;
 }
-header #logo {
-    margin: 20px auto 0;
-    cursor: pointer;
-}
-header #logo > img {
-    width: 150px;
-    height: auto;
-}
+
 header a {
-    color: black;
     font-size: 18px;
     font-weight: 600;
+    text-decoration: none;
+    margin : 0;
 }
-header span {
-	font-size: 13px;
-	font-weight: bold;
-	color: #5342ea;
-	position: absolute;
-	right: 20px;
-	top: 10px;
-	white-space: nowrap;
+.btn-group-sm>.btn {
+ 	padding : 0 !important;
 }
-/* 컨텐츠 영역 */
-.main {
-    width: 100%;
-    height: 100vh;
-    /* background-color: blue; */
+
+
+#admin {
+	color: gray;
 }
-.main img {
-	width: 1024px;
-	height: 100%	
+
+#my {
+	color: gray;	
 }
-.main:nth-child(2) {
-    background-color: green;
-}
+
 /* footer */
+footer a {
+	text-decoration: none;
+}
+
+footer img {
+	display : flex;
+	height: 25px
+}
+
 footer {
-    background-color: lightslategray;
-    margin-top: 100px;
-    height: 200px;
+    background-color: light;
+    margin-top: 80px;
+    height: 100px;
 }
