--- a/src/main/webapp/css/user/mypage/myCommunity.css
+++ b/src/main/webapp/css/user/mypage/myCommunity.css
@@ -5,14 +5,11 @@
     list-style: none;
     text-decoration: none;
 }
-/* 마이페이지 영역 */
-.myCommunity_content {
-    width: 1024px;
-}
 /* 내 게시글 조회 헤더 영역 */
 .myCommunity_content_header {
     display: flex;
     align-items: center;
+    margin-left: 20px;
 }
 .myCommunity_content_header ul {
     display: flex;
@@ -39,6 +36,15 @@
     /* background-color: red; */
     padding: 10px 0;
 }
+.myCommunity_list td {
+    /* background-color: blue; */
+    padding: 5px 0;
+}
+.myCommunity_list tr {
+	border-bottom: 1px solid gray;
+}
+
+/* 체크박스 영역 */
 .myCommunity_list td:first-child {
 	text-align: center;
 }
@@ -47,6 +53,8 @@
 	height: 15px;
 	accent-color: black;	
 }
+
+/* 유형 영역 */
 .myCommunity_list th:nth-child(2), td:nth-child(2) {
     width: 130px;
     font-size: 15px;
@@ -55,6 +63,8 @@
 .myCommunity_list td:nth-child(2) {
     font-size: 12px;
 }
+
+/* 제목 영역 */
 .myCommunity_list th:nth-child(3) {
     width: 500px;
     text-align: center;
@@ -62,25 +72,22 @@
 .myCommunity_list td:nth-child(3) {
     text-indent: 20px;
 }
-.myCommunity_list td:nth-child(3) a{
+.myCommunity_list td:nth-child(3) a {
     color: black;
 }
+
+/* 작성일 영역 */
 .myCommunity_list th:nth-child(4), td:nth-child(4) {
     width: 170px;
     text-align: center;
 }
+
+/* 처리상태, 조회수 */
 .myCommunity_list td:nth-child(5) {
     text-align: center;
 }
 .myCommunity_list td:last-child {
     text-align: center;
-}
-.myCommunity_list td {
-    /* background-color: blue; */
-    padding: 5px 0;
-}
-.myCommunity_list tr {
-	border-bottom: 1px solid gray;
 }
 
 /* 내 게시글 조회 버튼 영역*/
