--- a/src/main/webapp/css/product/order.css
+++ b/src/main/webapp/css/product/order.css
@@ -3,27 +3,21 @@
 hr{
      padding: 1px;
  }
-.container {
-   	width: 1024px;
-    margin: 0 auto;  /* 화면에 가운데 정렬하기 위함 */
-}
-#title{
-     font-size: 30px;
-     font-weight: bold;
-     padding:  10px 0 0 10px;
+ #homeadd {
+ 	margin-left: 30px;
+ 	margin-top: 10px;
  }
-#user-info{
-     font-size: 20px;
-     font-weight: bold;
+ #last{
+ 	background-color: rgb(205, 223, 244);
+ 	padding: 20px;
  }
-.recipient-info{
-     background-color: lightgrey;
-     padding: 30px;
-     display: block;
-     margin: 20px;
+ .form-check{
+ 	margin-left: 30px;
+ 	margin-top: 10px;
+ 	align-content: center;
  }
 .product-info img{
-     width: 10px;
+     width: 80px;
  }
 .product-info{
      padding: 30px;
@@ -31,4 +25,10 @@ hr{
  }
 .product-price{
      padding: 0 30px;
+     
+ }
+ .product-price p{
+ 	text-align: right;
+ 	font-size: 22px;
+ 	font-weight: bold;
  }
