--- a/src/main/webapp/css/product/productList.css
+++ b/src/main/webapp/css/product/productList.css
@@ -1,12 +1,22 @@
 @charset "UTF-8";
 
-.img-product{
-	width: 100%;
-	height: 290px;
-	padding: 5px;
-	border-radius: 10px;
+#moveToPage {
+	text-decoration: none;
+	color : black;
 }
-.btn-outline-succes {
-	color : #9e9e9e;
-	border-color: #9e9e9e;
+
+.form-control{
+	width : 170px;
+}
+
+.align {
+	width : 170px;
+}
+
+h6{
+	transform: translate(0, 30px);
+}
+
+d-flex{
+	text-align: right;
 }
