--- a/src/main/webapp/css/user/mypage/myOrderList.css
+++ b/src/main/webapp/css/user/mypage/myOrderList.css
@@ -11,7 +11,9 @@
     width: 1000px;
     margin: 0 auto;
 }
-
+.myOrderList_content h2{
+	font-weight: bold;
+}
 /* 주문내역조회 헤더 영역 */
 .myOrderList_content_header {
     margin-left: 20px;
@@ -22,20 +24,20 @@
     width: 1000px;
     margin-top: 20px;
     border-collapse: collapse;
+    font-size: 15px;
 }
 .myOrderList_list thead {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+    text-align: center;
 }
 .myOrderList_list th {
     /* background-color: red; */
     padding: 10px 0;
-    font-size: 15px;
 }
 .myOrderList_list td {
     /* background-color: blue; */
     padding: 5px 0;
-    font-size: 12px;
 }
 .myOrderList_list tr {
 	border-bottom: 1px solid gray;
@@ -45,16 +47,41 @@
 .myOrderList_list [name="proNo"] {
     width: 450px;
     text-align: center;
-    background-color: red;
+}
+
+.myOrderList_list .proInfo {
+	padding: 20px;
+	display: flex;
+	align-items: center;
+}
+.myOrderList_list .proInfo {
+	vertical-align: middle;
+}
+/* 상품정보 사진 영역 */
+.myOrderList_list .proInfo img {
+	width: 120px;
+	height: 140px;
+}
+.myOrderList_list [name="proNo"] ul {
+	text-align: left;
+	padding: 0 10px;
+}
+.myOrderList_list [name="proNo"] li:nth-child(2) {
+	font-weight: bold;
+}
+.myOrderList_list [name="proNo"] li:nth-child(2) a {
+	color: black;
+}
+.myOrderList_list [name="proNo"] li:nth-child(3) {
+	font-weight: bold;
+	color: rgb(125, 125, 125);
 }
 
 /* 주문번호 영역 */
 .myOrderList_list [name="orderNo"] {
     width: 110px;
     text-align: center;
-    background-color: pink;
 }
-
 
 /* 주문일자 영역 */
 .myOrderList_list [name="orderDate"] {
@@ -65,10 +92,10 @@
 /* 주문금액(수량) 영역 */
 .myOrderList_list [name="orderPrice"] {
     text-align: center;
-    background-color: blue;
-    font-size: 15px;
 }
-
+.myOrderList_list [name="orderPrice"] span:first-child {
+	font-weight: bold;
+}
 /* 주문상태 영역 */
 .myOrderList_list [name="orderStatus"] {
     text-align: center;
@@ -79,11 +106,40 @@
 .myOrderList_list [name="reviewAdd"] {
  	text-align: center;
 }
-/* 상품 사진 이미지 */
-img {
-	width: 180px;
-	height: 180px;
-	margin: auto;
+.myOrderList_list #btn_review_add {
+	border: none;
+	color: white;
+	border-radius: 5px;
+	background-color: black;
+	font-size: 13px;
+	font-weight: bold;
+	padding: 7px 10px;
+}
+.myOrderList_list #review_wrong {
+	font-size: 12px;
+	color: rgb(125, 125, 125);
+	font-weight: bold;
 }
 
-
+/* 내 게시글 조회 페이지바 영역*/
+.myOrderList_content>.pagebar {
+	position: relative;
+	margin: 20px auto;
+	text-align: center;
+}
+.myOrderList_content>.pagebar a {
+	background-color: #c0c0c0;
+	width: 15px;
+	height: 15px;
+	padding: 5px 10px;
+	color: black;
+	border: none;
+	border-radius: 5px;
+}
+.myOrderList_content>.pagebar span {
+	background-color: black;
+	padding: 5px 10px;
+	color: white;
+	border: none;
+	border-radius: 5px;
+}
