--- a/src/main/webapp/css/admin/adminpage.css
+++ b/src/main/webapp/css/admin/adminpage.css
@@ -76,8 +76,50 @@ a {
     text-decoration: underline; 
 }
 
-/* footer */
-footer {
-    background-color: lightslategray !important;
-    height: 200px !important; 
+#moveToPage {
+	text-decoration: none;
+	color : black;
 }
+
+.form-control{
+	width : 170px;
+}
+
+.align {
+	width : 170px;
+}
+
+h6{
+	transform: translate(0, 30px);
+}
+
+d-flex{
+	text-align: right;
+}
+
+/* footer 하단 고정 [S] */
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+#body-wrapper {
+    min-height: 100%;
+    position: relative;
+}
+
+#body-content {
+    margin-top: 100px;
+    padding-bottom: 200px; /* footer의 높이 */
+}
+
+footer {
+	background-color: lightslategray !important;
+    width: 100%;
+    height: 200px; /* footer의 높이 */
+    position: absolute;  
+    bottom: 0;
+    left: 0;
+}
+/* footer 하단 고정 [E] */
