--- a/src/main/webapp/css/share/shareView.css
+++ b/src/main/webapp/css/share/shareView.css
@@ -1,18 +1,10 @@
 @charset "EUC-KR";
-/* 전체 요소 제거 후 시작 */
-* {
-    list-style: none;
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Noto Sans', sans-serif;
-}
+
 #header2 {margin: 100px 0 50px 0;  text-align: center; font-weight: bold; font-size: 30px;}
-nav    {transform: translateY(-10px); }
-nav ul {display: flex; justify-content:center;}
-nav ul li a {text-decoration:none;color:rgb(131, 130, 130); padding:0 30px; font-weight: bold; font-size: 20px;}
-nav ul li:not(:last-of-type)::after {content: "|"}    
-nav ul li a:hover    {color:rgb(0, 0, 0);}
+      .navi ul {display: flex; justify-content:center;}
+      .navi ul li a {text-decoration:none;color:rgb(131, 130, 130); padding:0 30px; font-weight: bold; font-size: 20px;}
+      .navi ul li:not(:last-of-type)::after {content: "|"}    
+      .navi ul li a:hover    {color:rgb(0, 0, 0);}
 
 /* 홈페이지 규격 */
 .container {
@@ -26,21 +18,7 @@ nav ul li a:hover    {color:rgb(0, 0, 0);}
 }
 
 /* header */
-header {
-    background-color: skyblue;
-    display: flex;
-    flex-wrap: nowrap;
-}
-nav {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-li {
-    margin: auto 20px;
-}
+
 #logo {
     margin: 20px auto 0;
 }
@@ -105,9 +83,3 @@ table#tbl-comment textarea{margin: 4px 0 0 0;}
 table#tbl-comment button.btn-comment-enroll2{width:60px; height:23px; color:white; background:lightslategray; position:relative; top:-5px; left:10px;}
 
 
-/* footer */
-footer {
-    margin-top: 100px;
-    background-color: lightslategray;
-    height: 200px;
-}
