--- a/src/main/webapp/css/admin/topProductAdd.css
+++ b/src/main/webapp/css/admin/topProductAdd.css
@@ -4,12 +4,10 @@
         li    {list-style:none; }
       #header2 {margin: 100px 0 50px 0;  text-align: center; font-weight: bold; font-size: 30px;}
       #content { text-align: center;}
-        nav    {transform: translateY(-10px); }
-        nav ul {display: flex; justify-content:center;}
-        nav ul li a {text-decoration:none;color:rgb(131, 130, 130); padding:0 30px; font-weight: bold; font-size: 20px;}
-        nav ul li:not(:last-of-type)::after {content: "|"}    
-        nav ul li a:hover    {color:rgb(0, 0, 0);}
-      img {width: 353px; height: 235px;}
+      .navi ul {display: flex; justify-content:center;}
+      .navi ul li a {text-decoration:none;color:rgb(131, 130, 130); padding:0 30px; font-weight: bold; font-size: 20px;}
+      .navi ul li:not(:last-of-type)::after {content: "|"}    
+      .navi ul li a:hover    {color:rgb(0, 0, 0);}
       
       #writer{width:30%; text-align:left; margin-bottom:10px;}
       
@@ -27,7 +25,7 @@
           margin-bottom:30px;
       }	
 
-      .dropdown {
+      .drop {
         
         margin: 0 150px;
         display: flex;
@@ -48,7 +46,7 @@
         
         
       }
-      .dropdown:before, .dropdown:after {
+      .drop:before, .drop:after {
         content: '';
         position: absolute;
         z-index: 2;
@@ -60,17 +58,17 @@
         border-color: #888 transparent;
         pointer-events: none;
       }
-      .dropdown:before {
+      .drop:before {
         border-bottom-style: solid;
         border-top: none;
       }
-      .dropdown:after {
+      .drop:after {
         margin-top: 7px;
         border-top-style: solid;
         border-bottom: none;
       }
 
-      .dropdown-select {
+      #drop-select {
         position: relative;
         width: 130%;
         margin: 0;
@@ -86,14 +84,14 @@
         border-radius: 0;
         -webkit-appearance: none;
       }
-      .dropdown-select:focus {
+      #drop-select:focus {
         z-index: 3;
         width: 100%;
         color: #394349;
         outline: 2px solid #49aff2;
         outline-offset: -2px;
       }
-      .dropdown-select > option {
+      #drop-select > .option {
         margin: 3px;
         padding: 6px 8px;
         text-shadow: none;
