--- a/src/main/webapp/css/user/mypage/myCart.css
+++ b/src/main/webapp/css/user/mypage/myCart.css
@@ -56,7 +56,6 @@
     width: 450px;
     text-align: center;
 }
-
 .myCart_list .proInfo {
 	padding: 20px;
 	display: flex;
@@ -65,6 +64,7 @@
 .myCart_list .proInfo {
 	vertical-align: middle;
 }
+
 /* 상품정보 사진 영역 */
 .myCart_list .proInfo img {
 	width: 120px;
@@ -96,13 +96,25 @@
     width: 120px;
     text-align: center;
 }
+.myCart_list [name="cartBuyStock"] input {
+	width: 30px;
+	text-align: center;
+	border: 1px solid rgb(150, 150, 150);
+	border-radius: 5px;
+	margin: 0 5px;
+}
 .myCart_list [name="cartBuyStock"] button {
-	width: 25px;
-	height: 25px;
+	width: 20px;
+	height: 20px;
 	border: none;
 	border-radius: 5px;
 	color: red;
 	font-weight: bold;
+}
+.myCart_list input::-webkit-outer-spin-button,
+.myCart_list input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 /* 주문금액 영역 */
 .myCart_list [name="orderPrice"] {
@@ -119,26 +131,26 @@
 	font-weight: bolder;
 }
 
-/* 후기 작성 버튼 영역 */
-.myCart_list [name="reviewAdd"] {
- 	text-align: center;
+/* 장바구니 삭제 버튼 영역 */
+.myCart_content #myCart_btn_del_area {
+	position: relative;
+	width: 100%;
+	height: 20px;
+	/* background-color: red; */
+	margin-top: 10px;
 }
-.myCart_list #btn_review_add {
+.myCart_content #btn_del {
+	padding: 5px 10px;
 	border: none;
-	color: white;
 	border-radius: 5px;
 	background-color: black;
+	color: white;
 	font-size: 13px;
 	font-weight: bold;
-	padding: 7px 10px;
-}
-.myCart_list #review_wrong {
-	font-size: 12px;
-	color: rgb(125, 125, 125);
-	font-weight: bold;
+	cursor: pointer;
 }
 
-/* 내 게시글 조회 페이지바 영역*/
+/* 장바구니 페이지바 영역*/
 .myCart_content>.pagebar {
 	position: relative;
 	margin: 20px auto;
@@ -159,4 +171,22 @@
 	color: white;
 	border: none;
 	border-radius: 5px;
+}
+
+/* 장바구니 주문 버튼 영역 */
+.myCart_content #myCart_btn_order_area {
+	position: relative;
+	width: 100%;
+	height: 20px;
+	/* background-color: red; */
+	margin: 30px auto;
+	text-align: center;
+}
+.myCart_content #btn_order {
+	margin-bottom: 30px;
+	padding: 10px 20px;
+	background-color: #004080;
+	color: white;
+	border: none;
+	font-weight: bold;	
 }
