코디북 진행중 !!

--- a/src/main/webapp/css/codi/codiView.css
+++ b/src/main/webapp/css/codi/codiView.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-.container d-flex flex-wrap{
-    flex-direction: column-reverse;
-    align-content: space-around;
+.nav{
+    justify-content: space-around;
 }
