--- a/src/main/webapp/css/admin/adminpage.css
+++ b/src/main/webapp/css/admin/adminpage.css
@@ -1,125 +1,129 @@
-/* 전체 요소 제거 후 시작 */
+@charset "UTF-8";
 * {
-    list-style: none;
-    text-decoration: none;
     margin: 0px;
     padding: 0px;
-    font-family: 'Noto Sans', sans-serif;
-}
-
-/* 홈페이지 규격 */
-.container {
-    width: 1024px !important; 
-    margin: 0 auto !important;  /* 화면에 가운데 정렬하기 위함 */ 
-}
-
-/* header */
-header {
-    background-color: skyblue !important;
-    display: flex !important;
-    flex-wrap: nowrap !important; 
-}
-nav {
-    width: 100% !important;
-    height: 100px !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: space-evenly !important;
-    text-decoration-line: none !important; 
-}
-
-adminmenu {
-    width: 100% !important;
-    height: 100px !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: space-evenly !important;
-}
-
-ul {
-    list-style: none !important;
-    margin: auto 20px !important;
-}
-
-li {
-    float: left !important;
-    margin: auto 20px !important; 
-}
-#logo {
-    margin: 20px auto 0 !important; 
-}
-#logo > img {
-    width: 150px !important; 
-    height: auto !important; 
-}
-a {
-    color: rgb(50, 50, 50) !important;
-    font-size: 18px !important;
-    font-weight: 600 !important;
+    list-style: none;
     text-decoration: none;
 }
-
-/* 컨텐츠 영역 */
-.main {
-    width: 100% !important;
-    height: 100vh !important; 
-    background-color: blue !important; 
+/* 내 게시글 조회 컨텐트 영역*/
+.adminPage_content {
+	width: 1000px;
+    margin: 0 auto;
 }
-.main:nth-child(2) {
-    background-color: green !important; 
+.adminPage_content h2 {
+	font-weight: bold;
 }
-
-.회원관리 {
-    color: rgb(50, 50, 50) !important;
-    font-size: 18px !important;
-    font-weight: 600 !important;
-    text-decoration: underline; 
-}
-
-#moveToPage {
+.adminPage_content a {
 	text-decoration: none;
-	color : black;
+}
+/* 내 게시글 조회 헤더 영역 */
+.adminPage_content_header {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+.adminPage_content_header ul {
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.adminPage_content_header a {
+    color: rgb(130, 130, 130);
+    margin: 0 20px;
+    font-weight: bold;
 }
 
-.form-control{
-	width : 170px;
+
+/* 내 게시글 조회 1:1문의 리스트 영역 */
+.adminPage_list {
+    width: 1000px;
+    border-collapse: collapse;
+}
+.adminPage_list thead {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.adminPage_list th {
+    /* background-color: red; */
+    padding: 10px 0;
+    text-align: center;
+}
+.adminPage_list td {
+    /* background-color: blue; */
+    padding: 5px 0;
+}
+.adminPage_list tr {
+	border-bottom: 1px solid gray;
 }
 
-.align {
-	width : 170px;
+/* 체크박스 영역 */
+.adminPage_list td:first-child {
+	text-align: center;
+}
+.adminPage_list input[type=checkbox] {
+	width: 15px;
+	height: 15px;
+	accent-color: black;	
 }
 
-h6{
-	transform: translate(0, 30px);
+/* 유형 영역 */
+.adminPage_list th:nth-child(2), td:nth-child(2) {
+    width: 130px;
+    font-size: 15px;
+    text-align: center;
+}
+.adminPage_list td:nth-child(2) {
+    font-size: 12px;
 }
 
-d-flex{
-	text-align: right;
+/* 제목 영역 */
+.adminPage_list th:nth-child(3) {
+    width: 500px;
+    text-align: center;
+}
+.adminPage_list td:nth-child(3) {
+    text-indent: 20px;
+}
+.adminPage_list td:nth-child(3) a {
+    color: black;
 }
 
-/* footer 하단 고정 [S] */
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+/* 작성일 영역 */
+.adminPage_list th:nth-child(4), td:nth-child(4) {
+    width: 170px;
+    text-align: center;
 }
 
-#body-wrapper {
-    min-height: 100%;
-    position: relative;
+/* 처리상태, 조회수 */
+.adminPage_list td:nth-child(5) {
+    text-align: center;
+}
+.adminPage_list td:last-child {
+    text-align: center;
 }
 
-#body-content {
-    margin-top: 100px;
-    padding-bottom: 200px; /* footer의 높이 */
+/* 내 게시글 조회 버튼 영역*/
+.adminPage_content #adminPage_btn_area {
+	position: relative;
+	width: 100%;
+	height: 20px;
+	/* background-color: red; */
+	margin-top: 10px;
+}
+.adminPage_content #btn_del {
+	padding: 5px 10px;
+	border: none;
+	border-radius: 5px;
+	background-color: black;
+	color: white;
+	font-size: 13px;
+	font-weight: bold;
+	cursor: pointer;
 }
 
-footer {
-	background-color: lightslategray !important;
-    width: 100%;
-    height: 200px; /* footer의 높이 */
-    position: absolute;  
-    bottom: 0;
-    left: 0;
+/* 내 게시글 조회 페이지바 영역*/
+.adminPage_content>.pagebar {
+	position: relative;
+	margin: 20px auto;
+	text-align: center;
 }
-/* footer 하단 고정 [E] */
