--- a/src/main/webapp/css/user/mypage/userEdit.css
+++ b/src/main/webapp/css/user/mypage/userEdit.css
@@ -19,8 +19,6 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-/* 	align-items: center;
-	justify-content: center; */
 }
 /* 입력 영역 */
 .input_area {
@@ -98,7 +96,9 @@
 	width: 405px;
 	margin-left: 240px;
 }
-
+.essential_mark {
+	color : red;
+}
 /* 비밀번호 확인 버튼 */
 .input_area #btn_show_pwd {
 	background: none;
@@ -106,12 +106,12 @@
 	z-index: 3;
 	position: absolute;
 	bottom: 5px;
-	/* right: 50px; */
+	right: 50px; 
 	cursor: pointer;
 }
 
-/* 회원가입 버튼 */
-#btn_enroll {
+/* 수정하기 버튼 */
+#btn_edit {
 	width: 300px;
 	padding: 10px 0;
 	margin-top: 100px;
