--- a/src/main/webapp/css/user/userForgotId.css
+++ b/src/main/webapp/css/user/userForgotId.css
@@ -19,9 +19,9 @@
         background-color: white;
         margin: 100px auto;
         position: relative;
-        color:black;
+        /* color:black;
         border-style: double;
-        border-radius:10px;
+        border-radius:10px; */
         padding:50px;
      
 
