--- a/src/main/webapp/css/user/userForgotId.css
+++ b/src/main/webapp/css/user/userForgotId.css
@@ -101,16 +101,22 @@
         font-size: 12px;
         color: rgb(120, 120, 120);
     }
-
-	
-    /* 찾기 버튼 */
-    #btn_find {
-        text-align: center;
-        width: 50px;
+    
+	.btnSearch{
+    	text-align: center;
+    }
+    
+    .btn-primary {
+    	background-color:#3f51b5;
+    	border-color: #3f51b5;
+    }
+    
+    .btn btn-primary {
+    	text-align: center;
         height: 30px;
         padding: 7px 0;
         margin-top: 30px;
-        margin-right: 70px;/*  */
+        margin-right: 70px;
         font-size: 15px;
         font-weight: bold;
         color: white;
@@ -118,20 +124,7 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
+    
+    
     }
-    /* 취소 버튼 */
-    #btn_cancel {
-        text-align: center;
-        width: 50px;
-        height: 30px;
-        padding: 7px 0;
-        margin-top: 30px;
-      	box-shadow:30px;
-        font-size: 15px;
-        font-weight: bold;
-        color: rgb(0, 0, 0);
-        background-color: rgb(125, 125, 125);
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
+ 
