--- a/src/main/webapp/css/user/userForgotPwd.css
+++ b/src/main/webapp/css/user/userForgotPwd.css
@@ -68,16 +68,7 @@
         font-size: 10px; color: rgb(0, 70, 113);
     }
 
-    /* 비밀번호 확인 버튼 */
-    .input_area #btn_show_pwd {
-        background: none;
-        border: none;
-        z-index: 3;
-        position: absolute;
-        top: 10px; right: 10px;
-        cursor: pointer;
-    }
-    
+  
     div:nth-child(3){
         margin-top: 10px;
         display: flex;
@@ -98,14 +89,22 @@
     }
 
 	
-    /* 찾기 버튼 */
-    #btn_find {
-        text-align: center;
-        width: 50px;
+   
+    .btnSearch{
+    	text-align: center;
+    }
+    
+    .btn-primary {
+    	background-color:#3f51b5;
+    	border-color: #3f51b5;
+    }
+    
+    .btn btn-primary {
+    	text-align: center;
         height: 30px;
         padding: 7px 0;
         margin-top: 30px;
-        margin-right: 70px;/*  */
+        margin-right: 70px;
         font-size: 15px;
         font-weight: bold;
         color: white;
@@ -113,11 +112,13 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
+    
+    
     }
     /* 취소 버튼 */
-    #btn_cancel {
+   .btn btn-secondary{
         text-align: center;
-        width: 50px;
+        width: 30px;
         height: 30px;
         padding: 7px 0;
         margin-top: 30px;
@@ -129,4 +130,4 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
-    }
+    } 
