--- a/src/main/webapp/css/product/order.css
+++ b/src/main/webapp/css/product/order.css
@@ -32,3 +32,10 @@ hr{
  	font-size: 22px;
  	font-weight: bold;
  }
+ 
+ .addbtn {
+ 	display: flex;
+ 	float: right;
+ 	transform: translate(0, 38px);
+ }
+ 
