장바구니 기능(삭제, 수량변경) 구현, 관심상품 등록 수정, 마이페이지 몇가지 추가 수정!

--- a/src/main/webapp/css/user/mypage/myCart.css
+++ b/src/main/webapp/css/user/mypage/myCart.css
@@ -151,26 +151,10 @@
 }
 
 /* 장바구니 페이지바 영역*/
-.myCart_content>.pagebar {
+.myCart_content .pagebar {
 	position: relative;
 	margin: 20px auto;
 	text-align: center;
-}
-.myCart_content>.pagebar a {
-	background-color: #c0c0c0;
-	width: 15px;
-	height: 15px;
-	padding: 5px 10px;
-	color: black;
-	border: none;
-	border-radius: 5px;
-}
-.myCart_content>.pagebar span {
-	background-color: black;
-	padding: 5px 10px;
-	color: white;
-	border: none;
-	border-radius: 5px;
 }
 
 /* 장바구니 주문 버튼 영역 */
