--- a/src/main/webapp/css/admin/adminpage.css
+++ b/src/main/webapp/css/admin/adminpage.css
@@ -5,18 +5,76 @@
     list-style: none;
     text-decoration: none;
 }
-/* 내 게시글 조회 컨텐트 영역*/
+
+/* 홈페이지 규격 */
+.container {
+    width: 1024px !important; 
+    margin: 0 auto !important;  /* 화면에 가운데 정렬하기 위함 */ 
+}
+
+/* 헤더 */
+header {
+    background-color: skyblue !important;
+    display: flex !important;
+    flex-wrap: nowrap !important; 
+}
+nav {
+    width: 100% !important;
+    height: 100px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: space-evenly !important;
+    text-decoration-line: none !important; 
+}
+
+adminmenu {
+    width: 100% !important;
+    height: 100px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: space-evenly !important;
+}
+
+ul {
+    list-style: none !important;
+    margin: auto 20px !important;
+
+}
+li {
+    float: left !important;
+    margin: auto 20px !important; 
+}
+
+a {
+    color: rgb(50, 50, 50) !important;
+    font-size: 18px !important;
+    font-weight: 600 !important;
+    text-decoration: none;
+}
+
+nav {
+    width: 100% !important;
+    height: 100px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: space-evenly !important;
+    text-decoration-line: none !important; 
+}
+/* adminpage 컨텐트 영역*/
 .adminPage_content {
 	width: 1000px;
     margin: 0 auto;
 }
 .adminPage_content h2 {
 	font-weight: bold;
+	margin-left : auto;
+	margin-right : auto;
+	
 }
 .adminPage_content a {
 	text-decoration: none;
 }
-/* 내 게시글 조회 헤더 영역 */
+/* adminpage 헤더 영역 */
 .adminPage_content_header {
     display: flex;
     align-items: center;
@@ -34,91 +92,34 @@
 }
 
 
-/* 내 게시글 조회 1:1문의 리스트 영역 */
-.adminPage_list {
+/* adminpage 리스트 영역 */
+.table {
     width: 1000px;
     border-collapse: collapse;
-}
-.adminPage_list thead {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-.adminPage_list th {
-    /* background-color: red; */
-    padding: 10px 0;
-    text-align: center;
-}
-.adminPage_list td {
-    /* background-color: blue; */
-    padding: 5px 0;
-}
-.adminPage_list tr {
-	border-bottom: 1px solid gray;
+    text-align : center;
 }
 
-/* 체크박스 영역 */
-.adminPage_list td:first-child {
-	text-align: center;
-}
-.adminPage_list input[type=checkbox] {
-	width: 15px;
-	height: 15px;
-	accent-color: black;	
+.th-1 {
+	width: 10px;
 }
 
-/* 유형 영역 */
-.adminPage_list th:nth-child(2), td:nth-child(2) {
-    width: 130px;
-    font-size: 15px;
-    text-align: center;
-}
-.adminPage_list td:nth-child(2) {
-    font-size: 12px;
+.th-2 {
+	width: 100px;
 }
 
-/* 제목 영역 */
-.adminPage_list th:nth-child(3) {
-    width: 500px;
-    text-align: center;
-}
-.adminPage_list td:nth-child(3) {
-    text-indent: 20px;
-}
-.adminPage_list td:nth-child(3) a {
-    color: black;
+.th-3 {
+	width: 300px;
 }
 
-/* 작성일 영역 */
-.adminPage_list th:nth-child(4), td:nth-child(4) {
-    width: 170px;
-    text-align: center;
+.th-6 {
+	width: 110px;
+}
+.th-7 {
+	width: 50px;
 }
 
-/* 처리상태, 조회수 */
-.adminPage_list td:nth-child(5) {
-    text-align: center;
-}
-.adminPage_list td:last-child {
-    text-align: center;
-}
-
-/* 내 게시글 조회 버튼 영역*/
-.adminPage_content #adminPage_btn_area {
-	position: relative;
-	width: 100%;
-	height: 20px;
-	/* background-color: red; */
-	margin-top: 10px;
-}
-.adminPage_content #btn_del {
-	padding: 5px 10px;
-	border: none;
-	border-radius: 5px;
-	background-color: black;
-	color: white;
-	font-size: 13px;
-	font-weight: bold;
-	cursor: pointer;
+.th-8 {
+	width: 50px;
 }
 
 /* 내 게시글 조회 페이지바 영역*/
