--- a/src/main/webapp/css/user/userForgotId.css
+++ b/src/main/webapp/css/user/userForgotId.css
@@ -127,9 +127,18 @@
     
     
     }
-    #findIdMSG {
-    	color:blue;
+    /* 아이디 메세지  */
+    #findIdMSG{
     	text-align:center;
+    	font-size:20px;
+    	color:blue;
+    }
+    
+     div .findIdColor span {
+    	color:blue;
+    	font-size:16px
+    	
+/*     	text-align:center; */
     
     }
     
