adminpage 전체 css 진행중!

--- a/src/main/webapp/css/admin/requestManagement.css
+++ b/src/main/webapp/css/admin/requestManagement.css
@@ -1,114 +1,5 @@
-/* 전체 요소 제거 후 시작 */
-* {
-    list-style: none;
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Noto Sans', sans-serif;
-}
+@charset "UTF-8";
 
-/* 홈페이지 규격 */
-.container {
-    width: 1024px !important; 
-    margin: 0 auto !important;  /* 화면에 가운데 정렬하기 위함 */ 
-}
-
-/* header */
-header {
-    background-color: skyblue !important;
-    display: flex !important;
-    flex-wrap: nowrap !important; 
-}
-nav {
-    width: 100% !important;
-    height: 100px !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: space-evenly !important;
-    text-decoration-line: none !important; 
-}
-
-adminmenu {
-    width: 100% !important;
-    height: 100px !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: space-evenly !important;
-}
-
-ul {
-    list-style: none !important;
-    margin: auto 20px !important;
-
-}
-li {
-    float: left !important;
-    margin: auto 20px !important; 
-}
-
-/* requestManagement 컨텐트 영역*/
-.requestManagement_content {
-	width: 1000px;
-    margin: 0 auto;
-}
-.requestManagement_content h2 {
-	font-weight: bold;
-	margin-left : auto;
-	margin-right : auto;
-	
-}
-.requestManagement_content a {
-	text-decoration: none;
-}
-/* requestManagement 헤더 영역 */
-.requestManagement_content_header {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-}
-.requestManagement_content_header ul {
-    display: flex;
-    margin-top: 20px;
-    margin-left: 20px;
-}
-.requestManagement_content_header a {
-    color: rgb(130, 130, 130);
-    margin: 0 20px;
-    font-weight: bold;
-}
-
-
-/* requestManagement 리스트 영역 */
-.requestManagement_list {
-    width: 1000px;
-    border-collapse: collapse;
-    text-align : center;
-}
-.requestManagement_list thead {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-
-.requestManagement_list th {
-    /* background-color: red; */
-    padding: 10px 0;
-    text-align: center;
-}
-.requestManagement_list td {
-    /* background-color: blue; */
-    padding: 5px 0;
-}
-.requestManagement_list tr {
-	border-bottom: 1px solid gray;
-}
-
-.th-3 {
-	width: 300px;
-}
-
-/* 내 게시글 조회 페이지바 영역*/
-.requestManagement_content>.pagebar {
-	position: relative;
-	margin: 20px auto;
-	text-align: center;
+.nav{
+    justify-content: space-around;
 }
