아이디 저장 css 변경, 회원정보 수정 유효성 검사 메세지 출력!

--- a/src/main/webapp/css/user/userLogin.css
+++ b/src/main/webapp/css/user/userLogin.css
@@ -89,7 +89,7 @@
     }
     .saveId_wrapper>label {
         font-size: 13px;
-        position: absolute; left: 110px;
+        position: absolute;
     }
     .forgot_wrapper a, span{
         font-size: 12px;
