인덱스 보내요고쳐줘요~

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -8,6 +8,11 @@
     font-family: 'Noto Sans', sans-serif;
 }
 
+.indexText{
+	color : #e5e5e5;
+}
+
+
 /* header */
 header {
     background-color: #e5e5e5;
