킹받는 로그인 해결 !

--- a/src/main/webapp/css/user/userLogin.css
+++ b/src/main/webapp/css/user/userLogin.css
@@ -90,6 +90,7 @@
     .saveId_wrapper>label {
         font-size: 13px;
         position: absolute;
+        margin-left:15px;
     }
     .forgot_wrapper a, span{
         font-size: 12px;
