--- a/src/main/webapp/css/user/userForgotPwd.css
+++ b/src/main/webapp/css/user/userForgotPwd.css
@@ -90,48 +90,11 @@
 
 	
    
-    .btnSearch{
+    #wrapper{
     	text-align: center;
     }
     
-    .btn-primary {
-    	background-color:#3f51b5;
-    	border-color: #3f51b5;
-    }
-    
-    .btn btn-primary {
-    	text-align: center;
-        height: 30px;
-        padding: 7px 0;
-        margin-top: 30px;
-        margin-right: 70px;
-        font-size: 15px;
-        font-weight: bold;
-        color: white;
-        background-color: black;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    
-    
-    }
-    /* 취소 버튼 */
-   .btn btn-secondary{
-        text-align: center;
-        width: 30px;
-        height: 30px;
-        padding: 7px 0;
-        margin-top: 30px;
-      	box-shadow:30px;
-        font-size: 15px;
-        font-weight: bold;
-        color: rgb(0, 0, 0);
-        background-color: rgb(125, 125, 125);
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    } 
-    
+  
     #tempPwdMSG{
     	/* background-color:red; */
     	
